Enable process reclaim

--- a/arch/arm/configs/aosp_yukon_eagle_defconfig
+++ b/arch/arm/configs/aosp_yukon_eagle_defconfig
@@ -563,3 +563,4 @@ CONFIG_PRONTO_WLAN=y
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_MATCH_RPFILTER=y
+CONFIG_PROCESS_RECLAIM=y
