--- a/arch/arm/configs/aosp_yukon_eagle_defconfig
+++ b/arch/arm/configs/aosp_yukon_eagle_defconfig
@@ -518,6 +518,8 @@ CONFIG_VFAT_FS_NO_DUALNAMES=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_CIFS=y
+CONFIG_CONFIGFS_FS=y
+CONFIG_SDCARD_FS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
